# storage/api-docs/api-docs.json
@@ -46,7 +46,7 @@
                                         "description": "Password for login",
                                         "type": "string",
                                         "format": "password",
-                                        "default": "Testing@123"
+                                        "default": "rahasia1"
                                     }
                                 },
                                 "type": "object"
@@ -175,6 +175,85 @@
                         }
                     }
                 }
+            }
+        },
+        "/logout": {
+            "get": {
+                "tags": [
+                    "Authentication Admin"
+                ],
+                "summary": "Logout user",
+                "description": "Logout the authenticated user",
+                "operationId": "31b719d28ebeef38c025490fa70352e8",
+                "responses": {
+                    "200": {
+                        "description": "Successfully logged out",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully logged out"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/refresh": {
+            "get": {
+                "tags": [
+                    "Authentication Admin"
+                ],
+                "summary": "Refresh JWT token",
+                "description": "Refresh the JWT token",
+                "operationId": "c5603b64ee034f6495bb3534c5fbf877",
+                "responses": {
+                    "200": {
+                        "description": "Token refreshed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "access_token": {
+                                            "type": "string"
+                                        },
+                                        "token_type": {
+                                            "type": "string",
+                                            "example": "bearer"
+                                        },
+                                        "expires_in": {
+                                            "type": "integer",
+                                            "example": 3600
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
             }
         },
         "/barantin/{take}": {
@@ -753,7 +832,7 @@
                 ]
             }
         },
-        "/user/cabang/{barantin_cabang_id}": {
+        "/user/cabang/{barantin_id}": {
             "get": {
                 "tags": [
                     "User"
@@ -763,7 +842,7 @@
                 "operationId": "getDetailCabangPerusahaanInduk",
                 "parameters": [
                     {
-                        "name": "barantin_cabang_id",
+                        "name": "barantin_id",
                         "in": "path",
                         "description": "ID of the Barantin Cabang",
                         "required": true,
@@ -1126,7 +1205,7 @@
         "/user/login": {
             "post": {
                 "tags": [
-                    "User"
+                    "Authentication User"
                 ],
                 "summary": "Login user",
                 "description": "Endpoint untuk login user with endpoint '/api/v2'",
@@ -1166,13 +1245,93 @@
                     }
                 }
             }
+        },
+        "/user/logout": {
+            "get": {
+                "tags": [
+                    "Authentication User"
+                ],
+                "summary": "Logout user",
+                "description": "Logout the authenticated user",
+                "operationId": "416e5a225979a51150362bca26e4cb9b",
+                "responses": {
+                    "200": {
+                        "description": "Successfully logged out",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully logged out"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/user/refresh": {
+            "get": {
+                "tags": [
+                    "Authentication User"
+                ],
+                "summary": "Refresh JWT token",
+                "description": "Refresh the JWT token",
+                "operationId": "ce76567d0626d46967c1c131a30aa288",
+                "responses": {
+                    "200": {
+                        "description": "Token refreshed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "access_token": {
+                                            "type": "string"
+                                        },
+                                        "token_type": {
+                                            "type": "string",
+                                            "example": "bearer"
+                                        },
+                                        "expires_in": {
+                                            "type": "integer",
+                                            "example": 3600
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
         }
     },
     "components": {
         "securitySchemes": {
             "bearer_token": {
-                "type": "apiKey",
-                "description": "Tambahkan Kata \"Bearer\" Sebelum token contoh: (Bearer xx|497zSWISvECINqxxxxxxxxxxxxxxx)",
+                "type": "http",
+                "scheme": "bearer",
+                "description": "Enter token in format (Bearer Token)",
                 "name": "Authorization",
                 "in": "header"
             }
